--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
   --footer-height: 40px;
   /* Colors */
   --background-color: #212121;
+  --burger-color: #313131;
   --text-color: #f0f0f0;
   --accent-color: #ffea00;
 }
@@ -18,6 +19,25 @@
 
 ul li {
   list-style-type: none;
+}
+
+/* SECTIONS */
+main section {
+  display: none;
+}
+
+main section.active {
+  display: block;
+  animation: fadeIn 0.5s ease;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* LAYOUT */
@@ -51,16 +71,16 @@ main {
   padding: 1rem;
 }
 
-/* HEADER */
 .header-top {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
   align-items: center;
   height: var(--header-height);
 }
 
 .header-title {
   color: var(--accent-color);
-  margin: 0 auto;
+  grid-column: 2;
 }
 
 .header-bottom {
