--- a/css/sections/burger.css
+++ b/css/sections/burger.css
@@ -25,6 +25,8 @@
   border-radius: 2rem;
   width: calc(100% - 4rem);
   max-width: 768px;
+  display: grid;
+  grid-template-rows: auto 1fr;
 }
 
 .burger-menu-header {
@@ -40,17 +42,10 @@
   grid-column: 2;
 }
 
-.burger-menu-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-}
-
 .burger-menu-body ul {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  gap: 3rem;
+  height: 100%;
 }
